# slopify-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: .github-ci.yaml
app/: mypy.ini  pyproject.toml  ruff.toml  test.py
app/app/: main.py
app/app/api/: deps.py  payments.py
app/app/core/: config.py
app/app/db/: session.py
app/app/db/models/: __init__.py
config/: skaffold.yaml
docker/: Dockerfile  requirements-os-build.txt
